--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,12 @@ h3 {
   color: #FFF7DB; 
 }
 
+h1{
+  text-align: center;
+}
+
 h2 {
+  text-align: center;
   font-size: 1.25em;
 }
 
@@ -46,9 +51,18 @@ footer {
 
 header {
   grid-area: heady;
-  text-align: center;
-  justify-self: center;
 }
+
+ .material-icons {
+  color: white; 
+  font-size: 2.5em !important;
+  justify-self: start; 
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 20px;
+  left: 20px;
+}
+
 
 main {
   grid-area: mainy;
@@ -143,34 +157,6 @@ footer {
 
 /*audio toggles area */
 
-
-
-/* style audio toggle buttons */ 
-/* .button {
-  background-color: #4CAF50; /* Green */
- /* border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-} */
-
-/* #playpause {
-  background-color: white; 
-  color: black; 
-  border: 2px solid #4CAF50;
-} */
-
-/* #playpause:hover {
-  background-color: #4CAF50;
-  color: white;
-} */
-
 [data-media],
 [data-media] *,
 [data-media] *:before,
@@ -252,19 +238,26 @@ canvas {
 
 /* animation css end */ 
 
+  /*links styling*/
+  /* unvisited link */
+  /* a:link {
+    color: white;
+  } */
+  
+  /* visited link */
+  /* a:visited {
+    color: lightgrey;
+  }
+  
+  /* mouse over link */
+  /* a:hover {
+    color: red;
+  } */
+  
+  /* selected link */
+  /* a:active {
+    color: blue;
+  } */
 
 
-
-/* link style
- a:link {
-  text-decoration: none;
-  color: black;
-}
-
- a:visited {
-  color: black;
-}
-
-a:link {
-  color: blue;
-} */
+  
