--- a/css/instruction.css
+++ b/css/instruction.css
@@ -45,7 +45,8 @@ body {
       "heady  heady"
       "mainy  mainy"
       "aside1 aside2" 
-      "asmr    tips"
+      "tips    aside2"
+      "asmr    asmr"
       "footy  footy";
   }
   
@@ -70,14 +71,18 @@ body {
   }
 
   #asmr {
+    grid-area: asmr;
     padding: 1em;
+    align-self:first baseline;
     /* max-width: 400px; */
   }
 
   #tips-a {
+    grid-area: tips;
     border: 1px solid black;
     border-radius: 1em;
-    align-self: center;
+    align-self:first baseline;
+    padding: 0, 4; 
   }
 
   header {
@@ -100,6 +105,7 @@ body {
 
   img{
     align-self: center;
+    margin-top: 20px;
     border: 1px solid black; 
     background-color: #fff1bd;
     max-width: 400px;
